ts: module-hide tests over full path mod in 20/140

--- a/testsuite/modulefiles.4/tag/.modulerc
+++ b/testsuite/modulefiles.4/tag/.modulerc
@@ -84,5 +84,59 @@ if {[info exists env(TESTSUITE_FPMOD_TAG)]} {
         forbid10 - forbid11 {
             module-virtual tag/1.1 ./1.0
         }
+        hide1 {
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        hide2 {
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.1
+            module-virtual tag/1.1 ./1.0
+        }
+        hide3 {
+            module-hide --hidden-loaded [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        hide4 {
+            module-version ./1.0 1.1.sym
+            module-alias tag/1.1.al tag/1.0
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        hide5 {
+            module-version ./1.0 1.1.sym
+            module-alias tag/1.1.al tag/1.0
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.1.sym
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.1.al
+        }
+        hide6 {
+            module-version ./1.2.sub default
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.2.sub
+        }
+        hide7 {
+            module-hide [file dirname $ModulesCurrentModulefile]/1.0
+            module-hide --hard tag/1.0
+        }
+        hide8 {
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.0
+            module-hide tag/1.0
+        }
+        hide9 {
+            module-hide --hard tag/1.0
+            module-hide --hard [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        hide10 {
+            module-hide --hidden-loaded [file dirname $ModulesCurrentModulefile]/1.0
+            module-hide [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        hide11 {
+            module-hide --hidden-loaded tag/1.0
+            module-hide [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        hide12 {
+            module-hide tag/1.0
+            module-hide --hidden-loaded [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        hide13 {
+            module-hide --soft --hidden-loaded [file dirname $ModulesCurrentModulefile]/1.0
+        }
     }
 }
