install: adapt RPM spec to install fish config snippet

--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -119,10 +119,12 @@ make install DESTDIR=%{buildroot}
 mkdir -p %{buildroot}%{_sysconfdir}/modulefiles
 mkdir -p %{buildroot}%{_datadir}/modulefiles
 mkdir -p %{buildroot}%{_sysconfdir}/profile.d
+mkdir -p %{buildroot}%{_datadir}/fish/vendor_conf.d
 mkdir -p %{buildroot}%{_bindir}
 %if 0%{?fedora}
 # setup for alternatives
 touch %{buildroot}%{_sysconfdir}/profile.d/modules.{csh,sh}
+touch %{buildroot}%{_datadir}/fish/vendor_conf.d/modules.fish
 touch %{buildroot}%{_bindir}/modulecmd
 # remove modulecmd wrapper as it will be handled by alternatives
 rm -f %{buildroot}%{_datadir}/Modules/bin/modulecmd
@@ -130,6 +132,7 @@ rm -f %{buildroot}%{_datadir}/Modules/bin/modulecmd
 # install profile links
 ln -s %{_datadir}/Modules/init/profile.csh %{buildroot}%{_sysconfdir}/profile.d/modules.csh
 ln -s %{_datadir}/Modules/init/profile.sh %{buildroot}%{_sysconfdir}/profile.d/modules.sh
+ln -s %{_datadir}/Modules/init/fish %{buildroot}%{_datadir}/fish/vendor_conf.d/modules.fish
 # install modulecmd wrapper script
 mv %{buildroot}%{_datadir}/Modules/bin/modulecmd %{buildroot}%{_bindir}/
 %endif
@@ -156,6 +159,7 @@ make test QUICKTEST=1
 # Cleanup from pre-alternatives
 [ ! -L %{_sysconfdir}/profile.d/modules.sh ] &&  rm -f %{_sysconfdir}/profile.d/modules.sh
 [ ! -L %{_sysconfdir}/profile.d/modules.csh ] &&  rm -f %{_sysconfdir}/profile.d/modules.csh
+[ ! -L %{_datadir}/fish/vendor_conf.d/modules.fish ] &&  rm -f %{_datadir}/fish/vendor_conf.d/modules.fish
 [ ! -L %{_bindir}/modulecmd ] &&  rm -f %{_bindir}/modulecmd
 
 # Migration from version 3.x to 4
@@ -166,6 +170,7 @@ fi
 %{_sbindir}/update-alternatives \
   --install %{_sysconfdir}/profile.d/modules.sh modules.sh %{_datadir}/Modules/init/profile.sh 40 \
   --slave %{_sysconfdir}/profile.d/modules.csh modules.csh %{_datadir}/Modules/init/profile.csh \
+  --slave %{_datadir}/fish/vendor_conf.d/modules.fish modules.fish %{_datadir}/Modules/init/fish \
   --slave %{_bindir}/modulecmd modulecmd %{_datadir}/Modules/libexec/modulecmd.tcl
 
 %postun
@@ -183,13 +188,16 @@ fi
 %endif
 %doc ChangeLog.gz README NEWS.txt MIGRATING.txt INSTALL.txt CONTRIBUTING.txt changes.txt
 %{_sysconfdir}/modulefiles
+%dir %{_datadir}/fish/vendor_conf.d
 %if 0%{?fedora}
 %ghost %{_sysconfdir}/profile.d/modules.csh
 %ghost %{_sysconfdir}/profile.d/modules.sh
+%ghost %{_datadir}/fish/vendor_conf.d/modules.fish
 %ghost %{_bindir}/modulecmd
 %else
 %{_sysconfdir}/profile.d/modules.csh
 %{_sysconfdir}/profile.d/modules.sh
+%{_datadir}/fish/vendor_conf.d/modules.fish
 %{_bindir}/modulecmd
 %endif
 %{_bindir}/envml
@@ -227,6 +235,10 @@ fi
 
 
 %changelog
+* Sat May 27 2023 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.3.0-2
+- Install module initialization script for fish as configuration snippet for
+  this shell via alternatives
+
 * Sun May 14 2023 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.3.0-1
 - Update to 5.3.0
 - Migrate to SPDX license format
