ts: test module-info tags on full path mod in 50/441

--- a/testsuite/modulefiles.4/tag/.modulerc
+++ b/testsuite/modulefiles.4/tag/.modulerc
@@ -138,5 +138,9 @@ if {[info exists env(TESTSUITE_FPMOD_TAG)]} {
         hide13 {
             module-hide --soft --hidden-loaded [file dirname $ModulesCurrentModulefile]/1.0
         }
+        info1 {
+            module-tag foo [file dirname $ModulesCurrentModulefile]/1.0
+            module-tag bar [file dirname $ModulesCurrentModulefile]/1.0
+        }
     }
 }
