ts: test sticky/super-sticky tag on full path mod in 50/463

--- a/testsuite/modulefiles.4/tag/.modulerc
+++ b/testsuite/modulefiles.4/tag/.modulerc
@@ -142,5 +142,21 @@ if {[info exists env(TESTSUITE_FPMOD_TAG)]} {
             module-tag foo [file dirname $ModulesCurrentModulefile]/1.0
             module-tag bar [file dirname $ModulesCurrentModulefile]/1.0
         }
+        sticky1 {
+            module-tag sticky [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        sticky2 {
+            module-tag super-sticky [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        sticky3 {
+            module-tag sticky [file dirname $ModulesCurrentModulefile]
+            module-virtual tag/1.1 ./1.0
+        }
+        sticky4 {
+            module-tag super-sticky [file dirname $ModulesCurrentModulefile]
+            module-virtual tag/1.1 ./1.0
+        }
     }
 }
