--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,6 @@ script/nglfar2ccov export-ignore
 script/commit-msg export-ignore
 script/pre-commit export-ignore
 .codespellrc export-ignore
-.aspell.en.pws export-ignore
+.hunspell.en.dic export-ignore
 # no export of website-specific content
 doc/talk export-ignore
