gh: configure safe dir for actions/checkout on Cygwin env
Get rid of "fatal: detected dubious ownership in repository" issue
during actions/checkout post run in native and Cygwin CI jobs.

--- a/.github/workflows/windows_tests.yaml
+++ b/.github/workflows/windows_tests.yaml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          set-safe-directory: /cygdrive/d/a/modules/modules
       - uses: cygwin/cygwin-install-action@master
         with:
           # precise all sphinxcontrib packages required as dependency spec
@@ -68,6 +69,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          set-safe-directory: /cygdrive/d/a/modules/modules
       - uses: cygwin/cygwin-install-action@master
         with:
           # precise all sphinxcontrib packages required as dependency spec
