Record module scan elements per modulepath
Update extra match search mechanism to record elements defined by
modulefiles per modulepath. First dict level is updated to split
information per modulepath. This way when two modules with same name are
available in several modulepaths, if only one matches search query, the
others will not be included in result.

Fixes #497

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2882,7 +2882,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
    # Phase #4: perform extra match search
 
    if {$ems_required} {
-      filterExtraMatchSearch $mod found_list versmod_list
+      filterExtraMatchSearch $dir $mod found_list versmod_list
    }
 
    # ensure modEqStatic is defined as expected (could have been redefined
