Reuse ems_required variable in getModules

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2666,8 +2666,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
 
       # if no indepth mode search, pass the depth level of the search query
       # unless EMS need to be performed (findModules should fetch everything)
-      set depthlvl [expr {$indepth || [isExtraMatchSearchRequired $mod] ? 0 :\
-         $querydepth + 1}]
+      set depthlvl [expr {$indepth || $ems_required ? 0 : $querydepth + 1}]
 
       array set found_list [findModules $dir $findmod $depthlvl $fetch_mtime]
    }
