Introduce tag extra specifier
Add tag extra specifier to query available modules based on tags
applying to them.

Rework filterExtraMatchSearch procedure to collect tags on each
modulefile or virtual module then check if tags in extra specifier query
match.

Tags are defined when evaluating modulerc files, which is done in
getModules at an earlier stage (than filterExtraMatchSearch).
Modulefiles do not need to be evaluated to fetch tags. Thus when extra
search query is only about tags, modulefile scan evaluation is skipped.

Add tags_collected_in state to record modulepaths for whom tags have
been collected. Use this state to avoid collecting tags in
filterExtraMatchSearch then a second time at the end of getModules.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -3123,7 +3123,10 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
 
    # Phase #6: consolidate tags set for retained modules
 
-   if {[currentState commandname] eq {avail}} {
+   # skip collecting tags if already performed for this modulepath or command
+   # is different than avail
+   if {[currentState commandname] eq {avail} && $dir ni [getState\
+      tags_collected_in]} {
       # load tags from loaded modules in the global structure prior collecting
       # tags found during this getModules evaluation
       cacheCurrentModules 0
