ts: test tag extra specifier in 51/044

--- a/testsuite/modulefiles.4/extra/.modulerc
+++ b/testsuite/modulefiles.4/extra/.modulerc
@@ -4,5 +4,19 @@ if {[info exists env(TESTSUITE_EXTRA)]} {
         prereqalt2 - prereqalt5 {
             module-version xtfoo/1.0 1.1
         }
+        tag1 {
+            module-tag xtfoo extra/1.0
+            module-forbid extra/1.0
+        }
+        tag2 {
+            module-tag xtfoo extra/1.0
+        }
+        tag3 {
+            module-tag xtfoo extra/1.0
+            module-hide extra/1.0
+        }
+        tag4 {
+            module-tag xtfoo [file dirname $ModulesCurrentModulefile]/1.0
+        }
     }
 }
