Allow tag abbrev as extra specifier name

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -759,6 +759,18 @@ proc abbrevTagList {taglist} {
    return [lsort -dictionary $ret]
 }
 
+proc getTagFromAbbrev {abbrev} {
+   if {![array exists ::g_abbrevTag]} {
+      getConf tag_abbrev
+   }
+   if {[info exists ::g_abbrevTag($abbrev)]} {
+      set tag $::g_abbrevTag($abbrev)
+   } else {
+      set tag {}
+   }
+   return $tag
+}
+
 proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
    set vrspeclist {}
    set loadedsgrkey {}
