Switch vrlist content order in g_moduleVersSpec structure
Update g_moduleVersSpec data structure to reorder vrlist elements,
switching vrisbool boolean with vrvalue. When storing more than one
variant values, all values will be the remaining elements in vrlist
(indexes 2 to end).

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -2624,7 +2624,7 @@ proc variant {itrp args} {
 
    # search for variant specification (most right-positionned value wins)
    for {set i [expr {[llength $vrlist]-1}]} {$i >= 0} {incr i -1} {
-      lassign [lindex $vrlist $i] vrname vrvalue
+      lassign [lindex $vrlist $i] vrname vrisbool vrvalue
       if {$vrname eq $name} {
          # translate value in boolean canonical form (0/1) if variant is bool
          if {$isboolean && [string is boolean -strict $vrvalue]} {
