--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1240,7 +1240,7 @@ proc prepareMapToHightlightVariant {args} {
    if {[sgr hi {}] ne {}} {
       foreach modspec $args {
          foreach vrspec [getVariantListFromVersSpec $modspec] {
-            lassign $vrspec vrname vrvalue vrisbool
+            lassign $vrspec vrname vrisbool vrvalue
             if {![info exists vrname_map($vrname)]} {
                set maplist [list $vrname [sgr hi $vrname]]
                # also highlight shortcut if any
