--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -20,7 +20,7 @@ _module_avail() {
     local cur="${1:-}"
     # skip avail call if word currently being completed is an option keyword
     if [ -z "$cur" ] || [ "${cur:0:1}" != '-' ]; then
-        module avail --color=never -s -t -S --no-indepth -o '' "$cur" 2>&1
+        module avail --color=never -s -t -S --no-indepth -o 'alias:indesym' "$cur" 2>&1
     fi
 }
 
