--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -3,7 +3,7 @@
 #
 
 alias _module_avail '\\
-    @TCLSH@ "@libexecdir@/modulecmd.tcl" tcsh avail --color=never -s -t -S -o "" |& cat'
+    @TCLSH@ "@libexecdir@/modulecmd.tcl" tcsh avail --color=never -s -t -S -o "alias:indesym" |& cat'
 
 alias _module_loaded '\\
     @TCLSH@ "@libexecdir@/modulecmd.tcl" tcsh list --color=never -s -t -o "" |& cat'
